Swagger and linting
