# routes/api/asset/index.js
@@ -2,6 +2,16 @@ const express = require('express');
 const router = express.Router();
 const Asset = require('../../../models/asset');
 
+// Get an asset by id
+router.get('/:id', (req, res) => {
+
+  Asset.findById(req.params.id)
+    .then((asset) => {
+      res.json(asset);
+    });
+
+});
+
 // Get an asset by url
 router.get('/url/:url', (req, res) => {
 
@@ -17,11 +27,11 @@ router.put('/', (req, res) => {
 
   Asset.upsert(req.body)
     .then((asset) => {
-        res.json(asset);
+      res.json(asset);
     })
     .catch((err) => {
-        console.error(err);
-        res.json(err);
+      console.error(err);
+      res.json(err);
     });
 
 });
